--- a/app/globals.css
+++ b/app/globals.css
@@ -18,16 +18,15 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
+  background: linear-gradient(#3d3d3d, black)
     rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+  .bg-brand-gradient {
+    background-image: linear-gradient(#3490dc, #6574cd);
   }
 }
